--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
   "homepage_url": "https://github.com/dpradom/navinfo-ag",
 
   "permissions": [
+    "<all_urls>",
+    "webRequest",
+    "storage"
   ],
 
   "icons": {
